# GPUfiltering

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
artikkelit/: ref.bib
src/: CMakeLists.txt  global_includes.h  logger.cpp  logger.h  main.cpp  pa_devs.c
src/filter_block/: FilterBlock.cpp  FilterBlock.h  GPUfilter.cu  GPUfilter.h  cudaHelpers.cpp  cudaHelpers.h  cudaUtils.cu  cudaUtils.h
src/pa_class/: PortAudioClass.cpp  PortAudioClass.h
src/signal_block/: SignalBlock.cpp  SignalBlock.h
src/tests/: FilterBlockTest.cpp  GPUfilterTest.cpp  PaClassTest.cpp
